--- a/Session 2/To-Do-List/css/mystyle.css
+++ b/Session 2/To-Do-List/css/mystyle.css
@@ -2,7 +2,21 @@
 	box-sizing: border-box;
 }
 
-.container,.card{
+.filter-container{
+    position: absolute;
+    top: 0;
+    right: 0;
+    background-color: #fff;
+	border-radius: 5px;
+	box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+	overflow: hidden;
+	width: 300px;
+	max-width: 100%;
+	margin-top: 10px;
+    margin-right: 10px;
+	border: 2px solid #0f0505;
+}
+.container{
 	background-color: #fff;
 	border-radius: 5px;
 	box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
@@ -11,6 +25,17 @@
 	max-width: 100%;
 	margin-top: 10px;
 	border: 2px solid #0f0505;
+}
+.card{
+    background-color: #fff;
+	border-radius: 5px;
+	box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+	overflow: hidden;
+	width: 300px;
+	max-width: 100%;
+	margin-top: 10px;
+	border: 2px solid #0f0505;
+
 }
 .card-subtitle{
     font-style: normal;
@@ -22,6 +47,11 @@
 	padding: 20px 40px;
 }
 
+.filter-container form{
+
+    padding: 15px 10px;
+
+}
 .form {
 	padding: 30px 40px;	
 }
